# scrape2feed

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.arm64
.github/workflows/: main.yml
migrations/2021-02-17-150458_create_items/: up.sql
server/: .env  .gitignore  Cargo.toml
server/migrations/2021-02-17-145611_create_feeds/: down.sql  up.sql
server/migrations/2021-03-03-172520_add_description/: up.sql
server/src/: downloader.rs  feeds.rs  main.rs
server/src/api/: mod.rs  model.rs  server.rs  v1.rs
server/src/db/: feeds.rs  items.rs  mod.rs  models.rs  schema.rs
src/: downloader.rs  feeds.rs  main.rs
src/api/: model.rs  v1.rs
src/db/: feeds.rs  items.rs  models.rs  schema.rs
ui/: package.json  vite.config.js  vue.config.js
ui/src/: App.vue  main.js
ui/src/components/: Feed.vue  Feeds.vue
web/: package.json  vue.config.js
web/src/: App.vue  main.js
web/src/components/: Feed.vue
