[package]
name = "scrape2feed"
version = "0.1.0"
authors = ["a-bouts <arnaud.bouts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
scraper = "*"
prettytable-rs = "*"
futures = "*"
rss = { verion = "*", features = ["builders"] }
tokio = { version = "*", features = ["full"] }
pretty_env_logger = "*"
log = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"]}
rocket = "*"
rocket_http = "*"
diesel = { version = "*", features = ["sqlite", "chrono"] }
diesel_migrations = "*"
dotenv = "*"
uuid = { version = "*", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "serve"]
