[package]
name = "scrape2feed"
version = "0.1.0"
authors = ["a-bouts <arnaud.bouts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
scraper = "*"
prettytable-rs = "*"
futures = "*"
rss = { version = "*", features = ["builders"] }
tokio = { version = "*", features = ["full"] }
pretty_env_logger = "*"
log = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"]}
rocket = "*"
rocket_http = "*"
diesel = { version = "*", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "*", features = ["sqlite"] }
dotenv = "*"
uuid = { version = "*", features = ["serde", "v4"] }
libsqlite3-sys = { version = "0.18.0", features = ["bundled"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "serve"]
