[package]
name = "scrape2feed"
version = "0.1.0"
authors = ["a-bouts <arnaud.bouts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
scraper = "*"
prettytable-rs = "*"
futures = "*"
rss = { version = "*", features = ["builders"] }
env_logger = "*"
log = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"]}
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1.12.0", features = ["sync"]}
diesel = { version = "*", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "*", features = ["sqlite"] }
dotenv = "*"
uuid = { version = "*", features = ["serde", "v4"] }
libsqlite3-sys = { version = "0.18.0", features = ["bundled"] }
html5ever = "*"
markup5ever_rcdom= "*"
